fix button misalignment

--- a/style.css
+++ b/style.css
@@ -111,12 +111,12 @@ a:hover, .a-hovering {
 	position: relative;
 }
 .nav ul li a {
-	display: inline-block;
+	display: flex;
+	align-items: center;
 	height: 20px;
 	padding: 0 12px;
 	font-size: 16px;
 	text-transform: uppercase;
-	vertical-align: middle;
 }
 .nav ul li a:hover {
 	color: var(--turqoise); 
@@ -125,17 +125,17 @@ a:hover, .a-hovering {
 }
 @media (max-width: 560px) {
 	.nav ul li a {
-	padding: 0 9px;
+		padding: 0 9px;
 	}
 }
 @media (max-width: 430px) {
 	.nav ul li a {
-	font-size: 12px;
+		font-size: 12px;
 	}
 }
 @media (max-width: 350px) {
 	.nav ul li a {
-	padding: 0 5px;
+		padding: 0 5px;
 	}
 }
 
